--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ a.social-icon.youtube:hover {background-position: -60px 0px;}
 	padding:15px;
 }
 
-#faq-grey-bg-wrapper,#video-grey-bg-wrapper, #category-grey-bg-wrapper, #grey-bg-wrapper, #contact-grey-bg-wrapper{
+#_404-grey-bg-wrapper, #faq-grey-bg-wrapper,#video-grey-bg-wrapper, #category-grey-bg-wrapper, #grey-bg-wrapper, #contact-grey-bg-wrapper{
 	background:#f6f6f6 url(../img/ui/header-gradient.png) repeat-x;
 	margin: 0;
 	overflow: auto;
@@ -748,6 +748,10 @@ div:first-child + div >div.check-item-image{
 #sitemap ul li {list-style:none;font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;padding-bottom:15px;}
 #sitemap ul li li{font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif;padding-bottom:2px;padding-top:2px;}
 #sitemap a {color:#242021;}
+
+#_404-message{margin:45px}
+#_404-message p{color:#9e9e9e; font-size:0.9em; line-height:1.5em}
+#_404-message a{color:#151515; text-decoration:underline}
 
 
 
