--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ select{}
 
 
 
+
 /*header*/
 #header{height:99px;background:#171717; color:#ffffff; }
 #SiS-logo{top:5px; left:5px; position:relative; height:78px; width:163px}
@@ -115,7 +116,7 @@ select{}
 #search-box input{border:0; padding:5px; background:none; width:225px; color:#656565;}
 #top-search-glass{position:absolute; top:4px; right:4px; padding:5px; cursor:pointer}
 #ajax-menu-container{top:99px; right:15px; position:absolute; z-index:9999; color:#171717; display:none}
-.yt-xclose, .xclose{float: right; padding: 10px 10px 0 0; cursor:pointer}
+.qb-xclose, .yt-xclose, .xclose{float: right; padding: 10px 10px 0 0; cursor:pointer}
 
 /*menu*/
 #main-menu{top:66px; left:170px; position:absolute;}
@@ -147,29 +148,29 @@ select{}
 #footer-columns{top:15px; left:45px; position:relative; width: 934px;}
 .footer-column{width:170px; float:left}
 #footer-email {float:right}
-#footer-email input{border:0;color:#656565; font-weight:bold; }
-#footer-email input[type=text]{width:145px; background:#e9e9e9; padding:7px 0 7px 3px; margin-right: -2px; }
+#footer-email input{border:0;color:#656565; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; }
+#footer-email input[type=text]{width:145px; background:#e9e9e9; padding:7px 0 7px 5px; margin-right: -2px; }
 #footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); color:#1c1800;  padding: 7px 25px 7px 0;  }
 
 .footer-column p{color:#a4a4a4; font-size:0.8em;}
-.news-offers{margin-top: -5px; display: block;}
+.news-offers{margin-top: 1px; display: block;}
 .telephone, .news-offers{color:#656565; font-size:0.8em;}
-.sign-up{color:#a4a4a4; font-size:0.7em;}
+.sign-up{color:#a4a4a4; font-size:0.7em; }
 .call-us{font-size:0.8em}
 .footer-column ul{margin-left:-20px; color:#656565;}
 .footer-column a{color:#656565; font-size:0.7em; text-decoration:none; line-height:20px;}
 .footer-column a:hover{color:#ffe100}
 #last-footer-column{padding-top:10px}
 #footer-nav{height:186px; background:#1e1e1e;}
-#sign-up-copy{width:152px; float:left; text-align:right; margin-right:3px}
+#sign-up-copy{width:152px; float:left; text-align:right; margin-right:3px; margin-top:3px}
 #footer-legal, #footer-follow{height:66px; background:#171717; color:#656565; float:left}
 #footer-legal{width:760px; text-align:right; font-size:0.55em}
 #footer-legal span{padding:30px 10px; display:block;}
-#footer-follow {width:264px}
+#footer-follow {width:264px;}
 #footer-follow a {display: inline-block; margin:20px 0 0 7px}
-#footer-follow h2 {display:block;font-size:0.8em;padding-right:0px; margin:27px 5px 0 35px; float:left; font-weight:bold}
+#footer-follow h2 {display:block;font-size:0.8em;padding-right:0px; margin:27px 5px 0 35px; float:left; font-weight:normal;  color:#656565;}
 .social-icon {display: block;width: 29px; height: 29px; background-repeat: no-repeat; background-image: url('../img/ui/social-icons-sprite.png');background-position: 0px 0px;}
-#contact-info {text-align:right}
+#contact-info {text-align:right; line-height: 18px;margin-top: 4px;}
 .opening-hours{color:#656565; font-size:0.75em; margin-top:-3px; display:block}
 #i-s-logo{float:right; margin: 20px 0;}
 
@@ -467,6 +468,19 @@ div:first-child + div >div.check-item-image{
 	clear: both;
 	margin: 50px 0 0 135px;
 }
+/* quick buy layer */
+
+#qb-overlay {background-image:url(../img/ui/yt-bg.png); height:100%; width:100%; position:fixed; top:0; left:0; display:none; }
+#qb-outer-frame{background-color:#ffffff; height:318px; width:594px; top: 0; left:0; right: 0; bottom:0; position:absolute; margin:auto;}
+#qb-inner-frame{margin:15px}
+#qb-overlay h2, #qb-overlay p{margin:0; font-weight:normal;}
+#qb-overlay h3{font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif; color:#9e9e9e; margin:0; font-weight:normal}
+#qb-overlay iframe{bottom:15px; position:absolute}
+#qb-header {margin: 0 15px}
+#qb-dd-product-selectors select {float: left; background: transparent; border: none; height: 30px; border-radius: 0; padding: 5px; margin-left: 2px; background: #dddddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0px; -webkit-appearance: none; -moz-appearance: none; text-indent: 0.01px; text-overflow: ""; width: 144px;background-position: -126px 0;margin-left: 0px;margin-bottom:20px;margin-right:15px; padding-right:10px;}
+#qb-dd-product-selectors .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:-14px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
+.qb-form{padding: 45px 15px;}
+
 
 /*************** home template ***************************/
 
@@ -533,7 +547,7 @@ div:first-child + div >div.check-item-image{
 .video-item h4{font-size:16px; font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif; color:#9e9e9e; margin:0; font-weight:normal}
 .video-item h5{display:none}
 /*video overlay*/
-#yt-overlay {background-image:url(../img/ui/yt-bg.png); height:100%; width:100%; position:fixed; top:0; left:0; display:none; }
+#yt-overlay {background-image:url(../img/ui/yt-bg.png); height:100%; width:100%; position:fixed; top:0; left:0; display:none; z-index:99999}
 #yt-outer-frame{background-color:#ffffff; height:601px; width:852px; top: 0; left:0; right: 0; bottom:0; position:absolute; margin:auto;}
 #yt-inner-frame{margin:15px}
 #yt-overlay h2{margin:0}
@@ -630,7 +644,7 @@ div:first-child + div >div.check-item-image{
 
 /* product page */
 #product-container{margin:0px 45px 45px 45px}
-#product-container #add-this-component{ height:32px; float:right;margin-top: 15px;}
+#product-container #add-this-component{ height:32px; float:right;margin-top: 15px; width:184px}
 #product-container h3{margin:0}
 #product-container .product-top-info{width:55%; float:left;margin-top:30px}
 #product-container .product-top-wysiwyg{width:40%; float:right; text-align:right;margin-top:40px}
@@ -677,7 +691,7 @@ div:first-child + div >div.check-item-image{
 /* content template */
 #content-container{overflow: hidden;}
 #content-container{margin: 0px 45px 45px 45px;}
-#content-container #add-this-component{ height:32px; float:right;margin-top: 15px;}
+#content-container #add-this-component{ height:32px; float:right;margin-top: 15px; width:184px}
 #content-product-list{width:242px; float:left}
 #content-product-list .product-display-box-a{margin-bottom:30px; padding: 15px 0 35px 0}
 #content-template-wysiwyg{width:648px; float:left; padding-right:44px;}
@@ -717,11 +731,11 @@ div:first-child + div >div.check-item-image{
 
 /*wysiwyg*/
 .wysiwyg-area{margin-bottom:40px}
-.contact-us p, #content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
+.contact-us p, #content-template-wysiwyg p{color: #9e9e9e; font-size:14px;line-height:20px}
 .contact-us a, #content-template-wysiwyg a{color:#151515; text-decoration:underline}
 .contact-us h3, #content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .contact-us h2, #content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
-.contact-us ul, #content-template-wysiwyg ul{font-size: 14px}
+.contact-us ul, #content-template-wysiwyg ul{font-size: 14px;line-height:20px}
 .v-centered-icon-text{height:29px; line-height:29px; float:left; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; width:170px;}
 .contact-us .icons img{float:left; padding-right: 5px}
 .contact-us .icons {height:29px}
@@ -801,6 +815,10 @@ div:first-child + div >div.check-item-image{
 @-moz-document url-prefix() {
 	#search-results-content .yellow-btn {top:2px;}
 }
+/* ie 10 */
+html[data-useragent*='MSIE 10.0'] select {
+  background: #dddddd none no-repeat -100px 0px !important;
+}
 
 /*  
 Sticky Footer Solution
@@ -835,4 +853,5 @@ float:left;
 width:0;
 margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
+
 
