--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -7,6 +7,8 @@
 
 #footer-email input[type=text]{height:16px;}
 #footer-email input[type=submit]{height: 30px;}
-
+#prod-list-wysiwyg {line-height: normal!important;}
 #mini-basket-items{max-height:none}
 .yellow-btn{height:45px !important; margin-left:0; padding-top:10px !important;}
+.faq-content .question-input {margin-left:-67px!important; margin-bottom:30px!important;}
+.faq-content .yellow-btn{top:-30px;}
