--- a/css/j.css
+++ b/css/j.css
@@ -3,3 +3,5 @@
 #my-account-register-form input[type=text]{width: 269px;}
 #my-account-register-form select{margin-left: 0px;}
 #register-newsletter label, #account-register-newsletter label {width: 100px;}
+.my-account-navigation a{color:#9e9e9e}
+.history-list a.yellow-button {font-family: HelveticaNeueLT-Bold, Helvetica, Arial, sans-serif;}
