--- a/css/ie.css
+++ b/css/ie.css
@@ -2,3 +2,4 @@
  select {
     background: #dddddd none no-repeat -100px 0px !important;
 }
+input[type="checkbox"] {background-color: transparent!important; border:0!important}
