--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -14,6 +14,9 @@
 .faq-content .yellow-btn{top:-30px;}
 #my-account-register-form p{float: none!important}
 .history-list ul{margin-left:0px!important;}
+.manage-delivery-titles{margin-left:0}
+.manage-address-wrapper UL{float:none!important; margin-left:0!important}
+.bottom-border{height:120px}
 
 
 /* T styles*/
