--- a/css/main.css
+++ b/css/main.css
@@ -1943,16 +1943,19 @@ border-right: 1px solid #9e9e9e;}
 /* delivery address pages */
 #account-manage-address{font-size: 12px;float:left;clear:both;}
 #account-manage-address-menu ul{margin:30px 30px 0 }
-#account-manage-address .yellow-button-wide{float:right; clear:both;}
+#account-manage-address .yellow-button-wide{float:right; clear:both; margin-right:30px}
 #account-manage-address li a.link {float:left; clear:both;margin-bottom:10px;}
 #account-manage-address li a.remove-button{color:#ff0055;}
-.manage-delivery-titles{width: 994px; list-style-type: none;}
+.manage-delivery-titles{width: 934px; list-style-type: none;}
 .manage-delivery-titles li{ float: left;text-align: left;padding-left: 15px;}
-#account-manage-address ul{list-style-type: none; float:left;padding: 0;}
+#account-manage-address ul{list-style-type: none; float:left;padding: 0 0 10px 0; }
 .manage-delivery-this-address{clear:both; margin: 15px 30px;}
 .manage-delivery-this-address > li{float:left;}
 .delivery-name{width: 290px;}
 .delivery-address {width: 320px;}
+
+.manage-address-wrapper{/**/width: 934px; margin:auto 30px/**/}
+#account-manage-address hr{margin:30px; border-style:dotted; border-color:gray;}
 
 /*add and edit address pages*/
 #account-add-address, #account-edit-address{margin: 0 30px;}
@@ -1971,6 +1974,7 @@ border-right: 1px solid #9e9e9e;}
 .add-address-form-your-details button.black-button{margin-top: 14px;}
 .address-column-right{overflow: auto;float: left;margin-top: 46px;}
 .address-column-left{overflow: auto;clear:both; float: left;margin-right: 30px;border-right: dotted 1px #9e9e9e;padding-right: 30px;height: 455px;}
+.delivery-links{width:264px}
 
 /*refer a friend */
 .refer-friends-container{clear:left; float:left; width:934px; font-size:12px;}
@@ -2004,7 +2008,13 @@ margin-left: 30px;}
 #reset-password .bottom-border{width: 934px;float:right;clear:both;}
 
 
-
+ /*late fixes */
+.register-form-delivery {width: 470px;}
+#my-account-register-form input[type=text]{width: 269px;}
+#my-account-register-form select{margin-left: 0px;}
+#register-newsletter label, #account-register-newsletter label {width: 100px;}
+.my-account-navigation a{color:#9e9e9e}
+.history-list a.yellow-button {font-family: HelveticaNeueLT-Bold, Helvetica, Arial, sans-serif;}
 
 /* firefox tweaks */
 @-moz-document url-prefix() {
