--- a/css/main.css
+++ b/css/main.css
@@ -1983,12 +1983,12 @@ border-right: solid 1px #9e9e9e; height:300px; padding-bottom:50px;}
 #account-refer-friend .instructions p:first-child{font-family: HelveticaNeueLT-Bold;font-size: 14px;}
 #refer-friends p{float: left; clear: both; width: 534px; }
 #refer-friends{float:left; width: 514px; margin-left: 30px; font-size:12px; margin-top:14px}
-#refer-friends input{width: 173px;margin-right: 15px;}
-#refer-friends label{padding-right: 10px;}
+#refer-friends input{width: 200px;margin-right: 15px;}
+#refer-friends label{padding-right: 10px; width:180px;}
 #refer-friends button{margin-top:0;}
 #refer-friend-past{float:left; clear:both;}
 #refer-friend-past ul{list-style-type: none; float:left; clear:both; padding:0; width:934px; font-size:12px;}
-ul.referred-friend-row{margin: 0;}
+ul.referred-friend-row{margin: 0 15px;}
 ul.referred-friend-row li{border-bottom: dotted 1px #9e9e9e; padding: 20px 0; margin: 0;}
 #refer-friend-past {margin-bottom: 30px;}
 #refer-friend-past li{float:left; width:130px; padding-left:10px; text-align:center;}
@@ -1996,6 +1996,7 @@ ul.referred-friend-row li{border-bottom: dotted 1px #9e9e9e; padding: 20px 0; ma
 #refer-friend-past li.friend-email, #refer-friend-past li.title-friend-email{ width:160px;}
 .refer-friends-title{background-color: #2a2a2a; color: #ffffff;height: 43px;padding-left: 0;text-align: center;
 font-size: 14px;font-family: HelveticaNeueLT-Bold;line-height: 42px;}
+#account-refer-friend{overflow:hidden; margin:30px}
 
 /*reset password */
 #reset-password{float: left;
