--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -10,6 +10,7 @@
 #prod-list-wysiwyg {line-height: normal!important;}
 #mini-basket-items{max-height:none}
 .yellow-btn{height:45px !important; margin-left:0; padding-top:10px !important;}
+#reset-password  .yellow-button{margin-top:25px}
 .faq-content .question-input {margin-left:-67px!important; margin-bottom:30px!important;}
 .faq-content .yellow-btn{top:-30px;}
 #my-account-register-form p{float: none!important}
