--- a/css/main.css
+++ b/css/main.css
@@ -868,7 +868,7 @@ button{	cursor:pointer;}
 .margin-top-30{	margin-top: 30px;}
 .margin-top-none{margin-top: 0;}
 .crossed{text-decoration: line-through;}
-.bottom-border{border-bottom: 1px dotted #9e9e9e;}
+.bottom-border{border-bottom: 1px dotted #9e9e9e; /*try a bit of global padding wanted on 10.3.14*/ padding-bottom: 10px;}
 .bold {font-family: HelveticaNeueLT-Bold, Helvetica, Arial, sans-serif;}
 .float-right{float: right;}
 .full-width{width: 100%;}
@@ -1931,7 +1931,7 @@ border-right: 1px solid #9e9e9e;}
 #update-newsletter input[type="checkbox"]{width: 12px; margin-top: -8px;}
 #update-newsletter input[type="radio"]:checked{background-position: 22px -8px;}
 #update-newsletter input[type="radio"]{background-position: 53px -8px;}
-#account-update .row-title{font-size: 13px; margin-bottom: 18px;padding-left: 5px; }
+#account-update .row-title{font-size: 13px; margin-bottom: 18px;padding-left: 5px; padding-bottom: 5px; }
 #update-newsletter .row-title{height: 16px;}
 #account-update legend+label{padding-left: 0;}
 #account-update legend{margin: 0; padding: 0; font-size: 12px; color: #9e9e9e;}
@@ -1996,7 +1996,7 @@ ul.referred-friend-row li{border-bottom: dotted 1px #9e9e9e; padding: 20px 0; ma
 #refer-friend-past li.friend-email, #refer-friend-past li.title-friend-email{ width:160px;}
 .refer-friends-title{background-color: #2a2a2a; color: #ffffff;height: 43px;padding-left: 0;text-align: center;
 font-size: 14px;font-family: HelveticaNeueLT-Bold;line-height: 42px;}
-#account-refer-friend{overflow:hidden; margin:30px}
+#account-refer-friend{overflow:hidden; margin:30px 30px 30px 0}
 
 /*reset password */
 #reset-password{float: left;
