--- a/css/main.css
+++ b/css/main.css
@@ -1265,6 +1265,7 @@ fieldset{
 input#register-signup-newsletter, input#account-register-signup-newsletter{
 	margin-bottom: 0;
 	margin-top: 20px;
+	width: 15px;
 }
 
 #update-newsletter fieldset label.next-line{ padding-left: 0; clear: both;}
@@ -1947,6 +1948,7 @@ border-right: 1px solid #9e9e9e;}
 #account-update .newsletter-options{margin-left:10px}
 #update-password .yellow-button{margin-top:49px;}
 #update-details .yellow-button{margin-top: 45px;}
+#radio-label-fix label {width:48px}
 
 
 /* delivery address pages */
@@ -2005,7 +2007,7 @@ ul.referred-friend-row li{border-bottom: dotted 1px #9e9e9e; padding: 20px 0; ma
 #refer-friend-past li.friend-email, #refer-friend-past li.title-friend-email{ width:160px;}
 .refer-friends-title{background-color: #2a2a2a; color: #ffffff;height: 43px;padding-left: 0;text-align: center;
 font-size: 14px;font-family: HelveticaNeueLT-Bold;line-height: 42px;}
-#account-refer-friend{overflow:hidden; margin:30px 30px 30px 0}
+#account-refer-friend{overflow:hidden; margin:30px}
 
 /*reset password */
 #reset-password{float: left;
