--- a/css/main.css
+++ b/css/main.css
@@ -2027,7 +2027,7 @@ margin-left: 30px;}
 #register-newsletter label, #account-register-newsletter label {width: 100px;}
 .my-account-navigation a{color:#9e9e9e}
 .history-list a.yellow-button {font-family: HelveticaNeueLT-Bold, Helvetica, Arial, sans-serif;}
-
+.rh-wysiwyg{text-align:right}
 /* firefox tweaks */
 @-moz-document url-prefix() {
 	#search-results-content .yellow-btn {top:2px;}
