--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -52,9 +52,9 @@
 #checkout-register-form p, #my-account-register-form p, #non-member-delivery-form p, 
 #add-address-overlay p, #edit-address-overlay p {width: 100%; padding: 10px 0;}
 
-#checkout-register-form select,  #non-member-delivery-form select, #members-checkout-delivery select, #add-address-overlay select, #edit-address-overlay select, #update-newsletter select, #update-password select{ height:46px;}
+#non-member-delivery-form select, #members-checkout-delivery select, #add-address-overlay select, #edit-address-overlay select, #update-newsletter select, #update-password select{ height:46px;}
 
-#my-account-register-form select, #update-details select,#account-add-address-form select, #account-edit-address-form select{margin-bottom:25px}
+#checkout-register-form select, #my-account-register-form select, #update-details select,#account-add-address-form select, #account-edit-address-form select{margin-bottom:25px}
 
 /*checkboxes*/
-#checkout-register-form input.checkbox, input[type=checkbox]{background-color:#f6f6f6; width: auto; border:0;}
+#checkout-register-form checkbox, input[type=checkbox]{background-color:transparent; width: auto; border:0;}
