--- a/css/main.css
+++ b/css/main.css
@@ -1233,7 +1233,7 @@ fieldset{
 
 .register-form-delivery{
 	float: left;
-	padding: 0 30px;
+	padding: 0 0 0 30px;
 	border-left: #000000 1px dotted;
 	width: 400px;
 }
@@ -1260,6 +1260,8 @@ fieldset{
 	float: left;
 	margin-top: 4px;
 	margin-left: 10px;
+	background:transparent;
+	border:0;
 }
 
 input#register-signup-newsletter, input#account-register-signup-newsletter{
@@ -2021,10 +2023,10 @@ margin-left: 30px;}
 
 
  /*late fixes */
-.register-form-delivery {width: 470px;}
+.register-form-delivery {/*width: 470px;*/}
 #my-account-register-form input[type=text]{width: 269px;}
 #my-account-register-form select{margin-left: 0px;}
-#register-newsletter label, #account-register-newsletter label {width: 100px;}
+#register-newsletter label, #account-register-newsletter label {width: 48px;}
 .my-account-navigation a{color:#9e9e9e}
 .history-list a.yellow-button {font-family: HelveticaNeueLT-Bold, Helvetica, Arial, sans-serif;}
 .rh-wysiwyg{text-align:right}
